# family-accounting

./: .fleet.toml  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.json  launch_app.bat  pyproject.toml  requirements.txt
app/: _tx_view.py  configuration.py  dashboard.py  data_loader.py  import_data.py  streamlit_app.py
family_accounting/: __init__.py  accounting.py  models.py
src/: __init__.py  calculator.py  classifier.py  config_manager.py  data_loader.py  database.py  ingest.py  logger.py  reports.py
src/parsers/: __init__.py  caixabank.py  revolut.py
tests/: test_accounting.py  test_caixabank_xlsx.py  test_calculator.py  test_classifier.py  test_configuration_keywords.py  test_database.py  test_integration.py  test_models.py  test_parsers.py  test_reports.py
