[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "family-accounting"
version = "0.1.0"
description = "Family accounting system for computing expenses in categories and compensations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
